# docs/swagger.yaml
@@ -20,7 +20,7 @@ definitions:
       stok:
         type: integer
     type: object
-host: localhost:8081
+host: golang-kasir-production.up.railway.app
 info:
   contact: {}
   description: API untuk aplikasi kasir sederhana
@@ -293,4 +293,7 @@ paths:
       summary: Update produk
       tags:
       - produk
+schemes:
+- https
+- http
 swagger: "2.0"
